--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.26.1",
     "body-parser": "^1.20.0",
     "express": "^4.17.3",
+    "lodash": "^4.17.21",
     "pug": "^3.0.2"
   }
 }
