--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.20.0",
     "express": "^4.17.3",
     "lodash": "^4.17.21",
+    "mongoose": "^6.2.10",
     "pug": "^3.0.2"
   }
 }
